petal_core/src/snapshots/petal__petal__parser__tests__binary_associativity.snap
---
source: src/petal/parser.rs
expression: "parse_expr(\"a + b - c\")"
---
(
    [
        Identifier {
            name: "a",
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        0,
                    ),
                ),
            },
            symbol_id: None,
        },
        Identifier {
            name: "b",
            span: Span {
                start: Pos(
                    4,
                ),
                end: Some(
                    Pos(
                        4,
                    ),
                ),
            },
            symbol_id: None,
        },
        Identifier {
            name: "c",
            span: Span {
                start: Pos(
                    8,
                ),
                end: Some(
                    Pos(
                        8,
                    ),
                ),
            },
            symbol_id: None,
        },
    ],
    [
        ExprNode {
            expr: Ident(
                IdentId(
                    1v1,
                ),
            ),
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        0,
                    ),
                ),
            },
        },
        ExprNode {
            expr: Ident(
                IdentId(
                    2v1,
                ),
            ),
            span: Span {
                start: Pos(
                    4,
                ),
                end: Some(
                    Pos(
                        4,
                    ),
                ),
            },
        },
        ExprNode {
            expr: BinaryOp {
                op: BinaryOp {
                    binary_type: Add,
                    span: Span {
                        start: Pos(
                            2,
                        ),
                        end: Some(
                            Pos(
                                2,
                            ),
                        ),
                    },
                },
                left: ExprId(
                    1v1,
                ),
                right: ExprId(
                    2v1,
                ),
            },
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        4,
                    ),
                ),
            },
        },
        ExprNode {
            expr: Ident(
                IdentId(
                    3v1,
                ),
            ),
            span: Span {
                start: Pos(
                    8,
                ),
                end: Some(
                    Pos(
                        8,
                    ),
                ),
            },
        },
        ExprNode {
            expr: BinaryOp {
                op: BinaryOp {
                    binary_type: Subtract,
                    span: Span {
                        start: Pos(
                            6,
                        ),
                        end: Some(
                            Pos(
                                6,
                            ),
                        ),
                    },
                },
                left: ExprId(
                    3v1,
                ),
                right: ExprId(
                    4v1,
                ),
            },
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        8,
                    ),
                ),
            },
        },
    ],
)
