petal_core/src/snapshots/petal__petal__parser__tests__groups-4.snap
---
source: src/petal/parser.rs
expression: "parse_expr(\"a ^ (b + c)\")"
---
(
    [
        Identifier {
            name: "a",
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        0,
                    ),
                ),
            },
            symbol_id: None,
        },
    ],
    [
        ExprNode {
            expr: Ident(
                IdentId(
                    1v1,
                ),
            ),
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        0,
                    ),
                ),
            },
        },
    ],
)
