petal_core/src/snapshots/petal__petal__parser__tests__identifiers-2.snap
---
source: src/petal/parser.rs
expression: "parse_expr(\"foo\")"
---
(
    [
        Identifier {
            name: "foo",
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        2,
                    ),
                ),
            },
            symbol_id: None,
        },
    ],
    [
        ExprNode {
            expr: Ident(
                IdentId(
                    1v1,
                ),
            ),
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        2,
                    ),
                ),
            },
        },
    ],
)
